plugins {
    id 'net.ltgt.errorprone'
    id 'org.sonarqube'
}

apply plugin: 'java'
apply plugin: 'maven-publish'
apply plugin: 'net.ltgt.errorprone'

sourceCompatibility = 11
targetCompatibility = 11

group = 'com.homeclimatecontrol'
version = '2.0.0-SNAPSHOT'

repositories {

    mavenCentral()
}

dependencies {

    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
    implementation 'org.rxtx:rxtx:2.1.7'
    implementation 'org.junit.jupiter:junit-jupiter:5.7.2'

    testImplementation 'org.mockito:mockito-core:3.12.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    testImplementation 'org.assertj:assertj-core:3.20.2'

    errorprone 'com.google.errorprone:error_prone_core:2.9.0'
}

sonarqube {
    properties {
        property "sonar.projectKey", "home-climate-control_owapi-reborn"
        property "sonar.organization", "home-climate-control"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}
